--- a/ctf.html
+++ b/ctf.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Schedule; Science Hack Day India 2019</title>
+  <title>Python; Science Hack Day India 2019</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -45,10 +45,10 @@
                 <li><a href="python.html">Python</a></li>
                 <li><a href="workshops.html">Workshops</a></li>
                 <li><a href="ctf.html">Capture the Flag (CTF)</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="galary.html">Gallery</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Gallery</a></li>
                 <li><a href="schedule.html">Schedule</a></li>
-                <li><a href="sponsor.html">Sponsor Us</a></li>
+                <li><a href="#">Sponsor Us</a></li>
                 <li><a href="coc.html">COC</a></li>
                 <li><a href="news.html">Blog</a></li>
                 <li class="dropdown">
@@ -60,7 +60,7 @@
                       <li><a href="sciencehackday.in/2016/index.html" target="_blank">SHD 2016</a></li>
                     </ul>
                   </li>
-                  <li class="cta"><a href="buy-tickets.html">Buy Tickets</a></li>
+                  <li class="cta"><a href="https://www.instamojo.com/shdindia/">Buy Tickets</a></li>
                 </ul>
               </nav>
             </div>
@@ -75,152 +75,20 @@
         <div class="row mb-5">
           <div class="col-lg-12">
             <div class="site-section-heading" data-aos="fade-up" data-aos-delay="100">
-              <h2>SHD India, Belgaum 2019 Schedule</h2>
+              <h2>Capture the Flag</h2>
             </div>
           </div>
           <div class="col-lg-12 mt-5 pl-lg-5" data-aos="fade-up" data-aos-delay="200">
-            <h3><font color="red">Day 0 - Friday, 18 October 2019</font> </h3>
-            <hr>
-            <ul><h4><font color="red">Morning Session</font></h4></ul>
+            <p><b>What is a CTF?</b><br><br>
+              A CTF is a game designed to let you learn to hack in a safe, rewarding environment. CTF contests are usually designed to serve as an educational exercise to give participants experience in securing a machine, as well as conducting and reacting to the sort of attacks found in the real world
 
-            <ul>Arrivals, Receiving the guests </ul>
-            <ul>Temporary accomodation arrangements made outside sankalpbhoomi </ul>
+              The CTF  challenges contestants to solve a variety of tasks ranging from a scavenger hunt on wikipedia to basic programming exercises, to hacking your way into a server to steal data. In these challenges, the contestant is usually asked to find a specific piece of text that may be hidden on the server or behind a webpage. This goal is called the flag, hence the name!
+            </p>
 
-            <ul>11:00 - Preparations at Makerspace Belgaum,  Train the trainers - practice session for volunteers.</ul>
-
-            <ul>01:00 -  	Lunch for guests </span></ul>
-            <hr>
-            <ul><h4><font color="red">Afternoon Session</font></h4></ul>
-            <hr>
-
-            <ul>02:00 - Preperations of demo activities , forming the teams </ul>
-
-            <ul>04:30 - Moving the material to Sankalpbhoomi, organizing stage, workshop spaces and hackerspace</ul>
-
-            <ul>06:00 - Guests/hackers arrive at sankalpbhoomi </ul>
-
-            <ul>07:00 - <font color="red">BoF session -Chat with Chaat </font> </ul>
-
-            <ul><ul>
-              <li>Hackers, volunteers and the team assemble at hackerspace for Birds of Feather session</li>
-            </ul></ul>
-            <ul>08:30 -  Dinner </ul>
-
-            <ul>10:00 -  Hacking Night, Demo installations, Star Gazing, Camp Fire etc...</ul>
-
-            <hr>
-          </div>
-          <div class="col-lg-12 mt-5 pl-lg-5" data-aos="fade-up" data-aos-delay="200">
-            <h3><font color="red">Day 1 - Saturday, 19 October 2019</font> </h3>
-            <hr>
-            <ul><h4><font color="red">Morning Session</font></h4></ul>
-
-            <hr>
-            <ul>08:30 -  	Breakfast </ul>
-
-            <ul>10:00 -  	Inaugural Function</ul>
-
-            <ul>10:30 -  	Introduction to Mentors, Mentors present their hack ideas</ul>
-
-            <ul>11:00 -  	Hacker participants form groups and move to the hacker space at cafeteria, <font color = "red">Hacking begins !</font></span></ul>
-
-            <ul>11:00 -  	Science Workshops for student participants (5th - 12th)</ul>
-            <ul>
-              <ul>
-                <ul>
-                  <li><font color = "red">Group I   - Science Toys - Faraday Box</font></li>
-                  <li><font color = "red">Group II   - Electronics and soldering </font></li>
-                </ul>
-              </ul>
-            </ul>
-            <ul>11:00 -  	Python Workshops for College students, teachers and hackers </ul>
-            <ul>
-              <ul>
-                <ul>
-                  <li><font color = "red">Python Workshop I </font> PYTHON 101 - Learn basics of programming with python</li>
-                </ul>
-              </ul>
-            </ul>
-            <ul>01:30 - Lunch </ul>
-
-            <hr>
-
-            <ul><h4><font color="red">Afternoon Session</font></h4></ul>
-
-            <ul>02:00 -  <span id="tab">Hacking continues....</span></ul>
-
-            <ul>02:00 -  <span id="tab">Workshops continue ...</span></ul>
-            <ul>
-              <ul>
-                <ul>
-                  <li><font color="red">Group II   - Science Toys - Faraday Box</font></li>
-                  <li><font color="red">Group I    - Electronics and soldering</font> </li>
-                  <li><font color="red">Python Workshop II</font> - Science and Engineering Experiments with ExpEYES</li>
-                </ul>
-              </ul>
-            </ul>
-
-            <ul>05:00 - High Tea</span></ul>
-
-            <ul>06:30 -  <span id="tab"><strong>Lightning Talks</strong></span></ul>
-
-            <ul>08:30 -  <span id="tab">Dinner</span></ul>
-
-            <ul>10:00 -  <span id="tab">Hacking Night, Music, Star Gazing Sessions, Camp Fire etc...</span></ul>
-
-            <ul> <span id="tab"></span></ul>
-
-            <hr>
-          </div>
-
-          <div class="col-lg-12 mt-5 pl-lg-5" data-aos="fade-up" data-aos-delay="200">
-            <h3><font color="red">Day 2 - Sunday, 20 October 2019</font> </h3>
-            <hr>
-            <ul><h4><font color="red">Morning Session</font></h4></ul>
-
-            <ul>08:30 -  Breakfast</ul>
-
-            <ul>09:30 -  Hacking Continues...</ul>
-
-            <ul>11:00 -  Python Workshops for College students, teachers and hackers</ul>
-            <ul>
-              <ul>
-                <ul>
-                  <li><font color ="red">Python Workshop III</font>  :   KuttyPy - Connect to the outside world using Python - Hands-on Microcontroller training for beginners</li>
-                </ul>
-              </ul>
-            </ul>
-            <ul>11:00 -  Demo Sessions for school kids and science lovers</ul>
-            <ul>12:00 -  Informative session I </ul>
-            <ul>01:00 -  	<span id="tab">Lunch</span></ul>
-
-            <hr>
-
-            <ul><h4><font color="red">Afternoon Session</font></h4></ul>
-
-            <ul>02:00 -  Let's Frame it !  SHD Group Photo with Hackers and young scientists </span></ul>
-
-            <ul>02:15 -  Make it presentable  : Finishing touch- preparing presentations. Hack ideas/prototypes/demo setups to be moved to main hall for display before 3:30</span></ul>
-
-            <ul>02:30 -  Science Demos  </ul>
-
-            <ul>04:00 -  <font color="red">Valedictary function </font></ul>
-
-            <ul>
-              <ul>
-                <li>Students, parents and judges interact with hackers and see the hacks/installations.</li>
-                <li>Teams present their hacks, Prople vote, People's Choice Award,  Award Winning teams announced & given SHD India medals</li>
-
-              </ul>
-            </ul>
-            <ul>07:00 -  <span id="tab">Music , Chat with Chaat. Gappa tappa, Ideas exchange, What next? </span></ul>
-
-            <ul>08:30 -  <span id="tab">Friendships, Fellowship and SHD Dinner </span></ul>
-            <hr>
+            <h3>This year, Science Hack Day India, Belgaum will host a Jeopardy-style CTF for all participants. The CTF will have a mix of challenges in Cryptography, Web Applications, Python, SQL and Javascript obfuscation. All challenges will have points depending on the complexity, The team that scores the maximum number of points wins the CTF challenge. </h3>
           </div>
         </div>
       </div>
-
 
       <footer class="site-footer">
         <div class="container">
@@ -236,7 +104,6 @@
                 <li><a href="http://tiny.cc/rjgxdz" target="_blank" >Event Reports</a></li>
                 <li><a href="schedule.html">Schedule</a></li>
                 <li><a href="workshops.html">Workshops</a></li>
-                <li><a href="ctf.html">Capture the Flag (CTF)</a></li>
                 <li><a href="http://sciencehackday.in/about.html#c1">Contact Us</a></li>
               </ul>
             </div>
