Updates the navigation links for archives

--- a/ctf.html
+++ b/ctf.html
@@ -55,9 +55,9 @@
                   <a class="dropdown-toggle" data-toggle="dropdown" href="#">Archive
                     <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                      <li><a href="https://sciencehackdayindia.github.io/2018/" target="_blank">SHD 2018</a></li>
-                      <li><a href="sciencehackday.in/2017/index.html" target="_blank">SHD 2017</a></li>
-                      <li><a href="sciencehackday.in/2016/index.html" target="_blank">SHD 2016</a></li>
+                      <li><a href="https://sciencehackdayindia.github.io/2018/" target="_blank" rel="noopener noreferrer">SHD 2018</a></li>
+                      <li><a href="https://sciencehackdayindia.github.io/2017/" target="_blank" rel="noopener noreferrer">SHD 2017</a></li>
+                      <li><a href="https://sciencehackdayindia.github.io/2016/" target="_blank" rel="noopener noreferrer">SHD 2016</a></li>
                     </ul>
                   </li>
                   <li class="cta"><a href="https://www.instamojo.com/shdindia/">Buy Tickets</a></li>
